Make code base work with Java 17